Minor fixes of the dark mode + automatic equation numbering (#160)
* Add an option for showing selected publications

* Improve publication styles

* Update README.md

* Clearfix

* Fix minor issues with dark mode

* Add automatic equation numbering (#158)

* Fix a typo

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1207,10 +1207,10 @@ nav[data-toggle="toc"] {
         transition: all 0.15s ease;
       }
       div.abstract.hidden {
-        border: dashed 1px white;
+        border: dashed 1px var(--global-bg-color);
       }
       div.abstract.hidden.open {
-        border-color: $grey-color;
+        border-color: var(--global-text-color);
       }
     }
   }
